# cmake_demo

./: CMakeLists.txt  README.md  cmake.sh  main.cpp
demo_beforeMain/: CMakeLists.txt  demo_beforeMain.cpp
demo_c11/: CMakeLists.txt  demo_c11.cpp  demo_c11.h
demo_class/: CMakeLists.txt  demo_class.cpp  demo_class.h
demo_file/: CMakeLists.txt  demo_file.cpp
demo_rvalueRef/: CMakeLists.txt  demo_rvalueRef.cpp
demo_smartPoint/: CMakeLists.txt  demo_smartPoint.cpp
demo_stl/: CMakeLists.txt  demo_stl.cpp
demo_struct/: CMakeLists.txt  main.c
demo_test/: CMakeLists.txt  main.c  main.cpp  test1.c  test2.c
demo_thread/: CMakeLists.txt  conditionVariableSample.h  demo_thread.cpp  demo_thread.h  main_thread.cpp  msgQueue.h  mutexSafe.h  threadPoolSamples.h  threadSamples.h  threadsafequeue.cpp  threadsafequeue.h
